--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "minimum-stability": "stable",
     "require-dev": {
         "phpunit/phpunit": "~5.7",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "~3.0",
+        "orchestra/database": "^3.4"
     },
     "autoload": {
         "psr-4": {
