--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ script:
   - vendor/bin/phpunit
 
 before_install:
-  - mysql -e 'CREATE DATABASE sequenceable_test;'
+  - mysql -u root -e 'CREATE DATABASE sequenceable_test;'
+  - mysql -u root -e "CREATE USER 'test'@'localhost' IDENTIFIED BY 'test';"
+  - mysql -u root -e "GRANT ALL ON sequenceable_test.* TO 'test'@'localhost';"
 
 matrix:
   fast_finish: true
