--- a/.styleci.yml
+++ b/.styleci.yml
@@ -2,6 +2,9 @@ disabled:
   - align_double_arrow
   - concat_without_spaces
   - trailing_comma_in_multiline_array
-  - no_blank_lines_after_throw
+  - phpdoc_align
+  - short_array_syntax
 enabled:
   - concat_with_spaces
+  - no_blank_lines_after_return
+  - not_operator_with_successor_space
