--- a/.styleci.yml
+++ b/.styleci.yml
@@ -4,6 +4,8 @@ disabled:
   - trailing_comma_in_multiline_array
   - phpdoc_align
   - short_array_syntax
+  - phpdoc_separation
+
 enabled:
   - concat_with_spaces
   - no_blank_lines_after_return
