--- a/.styleci.yml
+++ b/.styleci.yml
@@ -5,6 +5,7 @@ disabled:
   - phpdoc_align
   - short_array_syntax
   - phpdoc_separation
+  - blank_line_before_return
 
 enabled:
   - concat_with_spaces
