--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.4",
         "laravel/framework": "5.*"
     },
 
@@ -20,7 +20,8 @@
     "require-dev": {
         "phpunit/phpunit": "~5.7",
         "orchestra/testbench": "~3.0",
-        "orchestra/database": "^3.4"
+        "orchestra/database": "^3.4",
+        "composer/composer": "^1.10"
     },
     "autoload": {
         "psr-4": {
