--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,12 @@ sudo: false
 install:
   composer install
 
-script:
-  - vendor/bin/phpunit
-
 matrix:
   fast_finish: true
+
+script:
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
