--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,16 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
-    "illuminate/support": "^7.0",
-    "illuminate/database": "^7.0"
+    "php": "^7.4 || ^8.0",
+    "illuminate/support": "^7.0 || ^8.0",
+    "illuminate/database": "^7.0 || ^8.0"
   },
   "license": "MIT",
   "type": "library",
   "minimum-stability": "stable",
   "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "orchestra/testbench": "^5",
-    "orchestra/database": "^5",
+    "phpunit/phpunit": "^8.5.8 || ^9.3.7",
+    "orchestra/testbench": "^5.4||^6.0",
     "composer/composer": "^1.10"
   },
   "autoload": {
