build: remove support for PHP 8

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [ '8.0', '8.1' ]
+        php: [ '8.1' ]
         laravel: [ '8', '9' ]
 
     steps:
@@ -33,9 +33,7 @@ jobs:
         with:
           timeout_minutes: 5
           max_attempts: 5
-          command: |
-            composer require "laravel/framework:8.*" --no-update --no-interaction
-            composer require "orchestra/testbench:6.*" --no-update --no-interaction
+          command: composer require "laravel/framework:8.*" --no-update --no-interaction
         if: "matrix.laravel == '8'"
 
       - name: Select Laravel 9
@@ -43,12 +41,10 @@ jobs:
         with:
           timeout_minutes: 5
           max_attempts: 5
-          command: |
-            composer require "laravel/framework:9.*" --no-update --no-interaction
-            composer require "orchestra/testbench:7.*" --no-update --no-interaction
+          command: composer require "laravel/framework:9.*" --no-update --no-interaction
         if: "matrix.laravel == '9'"
 
-      - name: Install PHP  Dependencies
+      - name: Install PHP Dependencies
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 5
