--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
   "require": {
     "php": "^8.1",
     "illuminate/support": "^8.0 || ^9.0",
-    "illuminate/database": "^8.0 || ^9.0"
+    "illuminate/database": "^8.0 || ^9.0",
+    "vaened/php-sequence-generator": "^0.2.2"
   },
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "stable",
   "require-dev": {
     "phpunit/phpunit": "^9.3.7",
-    "orchestra/testbench": "^6.0 || ^7.0"
+    "orchestra/testbench": "^6.0 ||^7.0"
   },
   "autoload": {
     "psr-4": {
