--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "php": "^8.1",
     "illuminate/support": "^8.0 || ^9.0",
     "illuminate/database": "^8.0 || ^9.0",
-    "vaened/php-sequence-generator": "^0.2.2"
+    "vaened/php-sequence-generator": "^1.0.0"
   },
   "license": "MIT",
   "type": "library",
@@ -35,6 +35,13 @@
   "autoload-dev": {
     "psr-4": {
       "Enea\\Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Enea\\Sequenceable\\SequenceableServiceProvider"
+      ]
     }
   }
 }
