--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
   ],
   "require": {
     "php": "^8.1",
-    "illuminate/support": "^8.0 || ^9.0",
-    "illuminate/database": "^8.0 || ^9.0",
+    "illuminate/support": "^9.0 || ^10",
+    "illuminate/database": "^9.0 || ^10",
     "vaened/php-sequence-generator": "^1.0.0"
   },
   "license": "MIT",
   "type": "library",
   "require-dev": {
-    "phpunit/phpunit": "^9.3.7",
-    "orchestra/testbench": "^6.0 ||^7.0"
+    "phpunit/phpunit": "^9.5.10 || ^10.1",
+    "orchestra/testbench": "^7.0 || ^8.0"
   },
   "autoload": {
     "psr-4": {
