--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,15 @@
     }
   ],
   "require": {
-    "php": "^8.1",
-    "illuminate/support": "^9.0 || ^10",
-    "illuminate/database": "^9.0 || ^10",
+    "php": "^8.2",
+    "laravel/framework": "^10.21|^v11.15",
     "vaened/php-sequence-generator": "^1.0.0"
   },
   "license": "MIT",
   "type": "library",
   "require-dev": {
-    "phpunit/phpunit": "^9.5.10 || ^10.1",
-    "orchestra/testbench": "^7.0 || ^8.0"
+    "phpunit/phpunit": "^10.4",
+    "orchestra/testbench": "^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
