fix: Update namespace in multiple files
Updated the namespace from `Enea` to `Vaened` in multiple files to align with the new package name and structure.

This commit also includes changes to the following files:
- `composer.json`
- `config/sequenceable.php`
- `src/Succession.php`
- `src/Model/Sequence.php`
- `src/Contracts/SequenceContract.php`
- `src/Contracts/SequenceableContract.php`
- `src/Exceptions/SequenceException.php`
- `src/Linker.php`
- `src/Sequenceable.php`

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "enea/laravel-sequenceable",
+  "name": "vaened/laravel-sequenceable",
   "description": "Facilitates the generation and autocompletion of a sequential value in the database",
   "keywords": [
     "sequence",
@@ -28,18 +28,18 @@
   },
   "autoload": {
     "psr-4": {
-      "Enea\\Sequenceable\\": "src/"
+      "Vaened\\Sequenceable\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Enea\\Tests\\": "tests/"
+      "Vaened\\Sequenceable\\Tests\\": "tests/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Enea\\Sequenceable\\SequenceableServiceProvider"
+        "Vaened\\Sequenceable\\SequenceableServiceProvider"
       ]
     }
   }
