--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,15 @@
   ],
   "require": {
     "php": "^8.2",
-    "laravel/framework": "^10.21|^v11.15",
-    "vaened/php-sequence-generator": "^2.0.0"
+    "laravel/framework": "^v11.15|^12.0",
+    "vaened/php-sequence-generator": "^2.0.0",
+    "savia/nubefact-integration": "^0.2.0"
   },
   "license": "MIT",
   "type": "library",
   "require-dev": {
-    "phpunit/phpunit": "^10.4",
-    "orchestra/testbench": "^8.0|^9.0"
+    "phpunit/phpunit": "^11.0",
+    "orchestra/testbench": "^9|^10"
   },
   "autoload": {
     "psr-4": {
@@ -42,5 +43,11 @@
         "Vaened\\Sequenceable\\SequenceableServiceProvider"
       ]
     }
-  }
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:barnald1000/nubefact-integration.git"
+    }
+  ]
 }
